# Retail_demand_Forecasting

./: .coverage  .gitignore  README.md  Requirements.txt  pyproject.toml
.github/workflows/: ci.yml
dashboard/: dashboard_app.py  dashboard_requirements.txt
notebooks/: 01_EDA.ipynb
src/data/: preprocessing.py
src/evaluation/: metrics.py
src/features/: __init__.py  engineering.py
src/models/: lgbm_model.py  naive_baseline.py  optuna_tuning.py  sarima_model.py  tft_model.py  xgboost_model.py
tests/: test_features.py  test_metrics.py
