[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "retail-demand-forecasting"
version = "1.0.0"
description = "Probabilistic multi-horizon retail demand forecasting on the M5 Walmart dataset"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "scipy>=1.11.0",
    "scikit-learn>=1.3.0",
    "lightgbm>=4.0.0",
    "xgboost>=1.7.0",
    "statsmodels>=0.14.0",
    "pmdarima>=2.0.4",
    "loguru>=0.7.0",
    "joblib>=1.3.0",
    "tqdm>=4.66.0",
]

[project.optional-dependencies]
dashboard = ["streamlit>=1.28.0", "plotly>=5.15.0"]
deep = ["pytorch-forecasting>=1.0.0", "pytorch-lightning>=2.0.0", "torch>=2.0.0"]
dev = ["pytest>=7.4.0", "pytest-cov>=4.1.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
